// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no_error_on_unmatched_pattern > should handle --no-error-on-unmatched-pattern flag 1`] = `
"--------------------
arguments: --check --no-error-on-unmatched-pattern __non__existent__file.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------
Checking formatting...

Finished in <variable>ms on 0 files using 1 threads.
--- STDERR ---------
No files found matching the given patterns.
--------------------
--------------------
arguments: --check __non__existent__file.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 2
--- STDOUT ---------
Checking formatting...

--- STDERR ---------
Expected at least one target file
--------------------"
`;

exports[`no_error_on_unmatched_pattern > should handle unmatched glob patterns 1`] = `
"--------------------
arguments: --check __nonexistent__/**/*.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 2
--- STDOUT ---------

--- STDERR ---------
Expected at least one target file
--------------------
--------------------
arguments: --check --no-error-on-unmatched-pattern __nonexistent__/**/*.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------

--- STDERR ---------
No files found matching the given patterns.
--------------------"
`;

exports[`no_error_on_unmatched_pattern > should ignore ignored paths even when explicitly passed 1`] = `
"--------------------
arguments: --check --no-error-on-unmatched-pattern ignored-by-config/bad.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------

--- STDERR ---------
No files found matching the given patterns.
--------------------
--------------------
arguments: --check --no-error-on-unmatched-pattern ignored-by-config
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------

--- STDERR ---------
No files found matching the given patterns.
--------------------
--------------------
arguments: --check --no-error-on-unmatched-pattern ignored-by-prettierignore/bad.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------

--- STDERR ---------
No files found matching the given patterns.
--------------------
--------------------
arguments: --check --no-error-on-unmatched-pattern --ignore-path custom.ignore ignored-by-ignore-path/bad.js
working directory: no_error_on_unmatched_pattern/fixtures
exit code: 0
--- STDOUT ---------

--- STDERR ---------
No files found matching the given patterns.
--------------------"
`;
